--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
         "netcommons/plugin-manager": "@dev",
         "netcommons/topics": "@dev",
         "netcommons/workflow": "@dev",
-        "netcommons/wysiwyg": "@dev"
+        "netcommons/wysiwyg": "@dev",
+        "ext-json": "*"
     },
     "license": "LicenseRef-NetCommons",
     "license-ref-net-commons": "https://raw.githubusercontent.com/NetCommons3/NetCommons3/master/license.txt",
